commencement d'écriture des requêtes PATCH et delete